name:           werewolf-slack
version:        0.0.0.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/hjwylde/werewolf-slack

synopsis:       A Slack chat client for playing werewolf (https://github.com/hjwylde/werewolf)
description:    The game engine is based off of the party game Mafia, also known as Werewolf.
                See https://github.com/hjwylde/werewolf-slack for help on running the chat client.

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Game
build-type:     Simple

extra-source-files: CHANGELOG.md README.md

source-repository head
    type:       git
    location:   git@github.com:hjwylde/werewolf-slack

executable werewolf-slack
    main-is:        Main.hs
    hs-source-dirs: app/
    ghc-options:    -threaded -with-rtsopts=-N

    default-language: Haskell2010
    build-depends:
        base >= 4.8 && < 5,
        bytestring == 0.10.*,
        http-types == 0.9.*,
        wai == 3.2.*,
        warp == 3.2.*
