name:           werewolf-slack
version:        1.0.2.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/hjwylde/werewolf-slack

synopsis:       A chat interface for playing werewolf in Slack
description:    A chat interface for playing werewolf in Slack.

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Game
build-type:     Simple

extra-source-files: CHANGELOG.md README.md

source-repository head
    type:       git
    location:   git@github.com:hjwylde/werewolf-slack

executable werewolf-slack
    main-is:        Main.hs
    hs-source-dirs: app/
    ghc-options:    -threaded -with-rtsopts=-N
    other-modules:
        Paths_werewolf_slack
        Werewolf.Slack.Application
        Werewolf.Slack.Options
        Werewolf.Slack.Slack
        Werewolf.Slack.Version
        Werewolf.Slack.Werewolf

    default-language: Haskell2010
    build-depends:
        aeson == 1.1.*,
        base == 4.9.*,
        bytestring == 0.10.*,
        extra == 1.5.*,
        http-client == 0.5.*,
        http-client-tls == 0.3.*,
        http-types == 0.9.*,
        mtl == 2.2.*,
        optparse-applicative == 0.13.*,
        process == 1.4.*,
        text == 1.2.*,
        wai == 3.2.*,
        warp == 3.2.*,
        werewolf == 1.5.*
